// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SidebarMenu /> should render active Home icon when isHomeActive is true 1`] = `
<a
  className="flex w-full flex-row items-center space-x-4 px-4 py-3 duration-200 hover:bg-white/10"
  href="/"
  onClick={[Function]}
  onMouseEnter={[Function]}
  onTouchStart={[Function]}
>
  <span />
  <span
    className="hidden pt-2 text-2xl md:flex font-bold"
  >
    Home
  </span>
</a>
`;

exports[`<SidebarMenu /> should render active Profiles icon when isProfilesActive is true 1`] = `
<a
  className="flex w-full flex-row items-center space-x-4 px-4 py-3 duration-200 hover:bg-white/10"
  href="/"
  onClick={[Function]}
  onMouseEnter={[Function]}
  onTouchStart={[Function]}
>
  <span />
  <span
    className="hidden pt-2 text-2xl md:flex font-bold"
  >
    Home
  </span>
</a>
`;

exports[`<SidebarMenu /> should render inactive Home icon when isHomeActive is false 1`] = `
<a
  className="flex w-full flex-row items-center space-x-4 px-4 py-3 duration-200 hover:bg-white/10"
  href="/"
  onClick={[Function]}
  onMouseEnter={[Function]}
  onTouchStart={[Function]}
>
  <span />
  <span
    className="hidden pt-2 text-2xl md:flex"
  >
    Home
  </span>
</a>
`;

exports[`<SidebarMenu /> should render inactive Profiles icon when isProfilesActive is false 1`] = `
<a
  className="flex w-full flex-row items-center space-x-4 px-4 py-3 duration-200 hover:bg-white/10"
  href="/"
  onClick={[Function]}
  onMouseEnter={[Function]}
  onTouchStart={[Function]}
>
  <span />
  <span
    className="hidden pt-2 text-2xl md:flex"
  >
    Home
  </span>
</a>
`;
